# log_rotate

./: .gitmodules  CMakeLists.txt  README.md  output.sh
src/: main.cc
src/lib/CLI11/: CMakeLists.txt
